--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "backo2": "~1.0.2",
     "component-emitter": "~1.3.0",
     "debug": "~4.1.0",
-    "engine.io-client": "~4.0.0",
+    "engine.io-client": "git@github.com:yuchimin/engine.io-client-wxmp.git",
     "parseuri": "0.0.6",
     "socket.io-parser": "~4.0.1"
   },
