--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "socket.io-client",
+  "description": "socket.io-client for WeChat mini program",
   "version": "3.0.4",
   "keywords": [
     "realtime",
@@ -7,7 +8,9 @@
     "websocket",
     "tcp",
     "events",
-    "client"
+    "client",
+    "WeChat",
+    "wx"
   ],
   "files": [
     "dist/",
@@ -31,7 +34,7 @@
     "backo2": "~1.0.2",
     "component-emitter": "~1.3.0",
     "debug": "~4.1.0",
-    "engine.io-client": "git@github.com:yuchimin/engine.io-client-wxmp.git",
+    "engine.io-client-wxmp": "~4.0.5",
     "parseuri": "0.0.6",
     "socket.io-parser": "~4.0.1"
   },
