--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "backo2": "~1.0.2",
     "component-emitter": "~1.3.0",
     "debug": "~4.1.0",
-    "engine.io-client-wxmp": "~4.0.5",
+    "engine.io-client": "git://github.com/yuchimin/engine.io-client-wxmp.git#4.0.6",
     "parseuri": "0.0.6",
     "socket.io-parser": "~4.0.1"
   },
